--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitPlan | Sağlıklı Yaşam Planın</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -27,40 +26,39 @@
 
     <main class="pt-32 px-6 max-w-5xl mx-auto">
       <section class="text-center mb-20">
-        <h2 class="text-4xl font-extrabold text-green-700 mb-4">Kendi Sağlıklı Yaşam Planını Oluştur</h2>
-        <p class="text-lg text-gray-600 max-w-2xl mx-auto">FitPlan ile hedeflerine ulaş! Kişiye özel diyet önerileri, sağlıklı tarifler ve yaşam tavsiyeleriyle formda kal.</p>
+        <h2 class="text-4xl font-extrabold text-green-700 mb-4">Sağlıklı Yaşam Planını Oluştur</h2>
+        <p class="text-lg text-gray-600 max-w-2xl mx-auto">Kişiye özel diyet önerileri, sağlıklı tarifler ve yaşam tavsiyeleriyle fit kal!</p>
         <a href="#planlar" class="mt-6 inline-block bg-green-600 text-white px-6 py-3 rounded-full shadow hover:bg-green-700 transition">Planlara Göz At</a>
       </section>
 
       <section id="hakkinda" class="mb-20">
         <h3 class="text-2xl font-bold mb-4 text-green-700">FitPlan Nedir?</h3>
-        <p class="text-gray-700">FitPlan, sağlıklı yaşamayı hedefleyen bireyler için kişiselleştirilmiş beslenme ve diyet programları sunan dijital bir platformdur. Bilimsel verilerle hazırlanmış planlarımız, yaşam tarzınıza ve hedeflerinize göre şekillenir.</p>
+        <p class="text-gray-700">FitPlan, sağlıklı yaşamayı hedefleyen bireyler için kişiselleştirilmiş beslenme ve diyet programları sunar.</p>
       </section>
 
       <section id="planlar" class="mb-20">
-        <h3 class="text-2xl font-bold mb-8 text-green-700">Popüler Planlar</h3>
+        <h3 class="text-2xl font-bold mb-8 text-green-700">Planlar</h3>
         <div class="grid md:grid-cols-3 gap-6">
-          <div class="bg-white rounded-lg shadow p-6">
+          <div class="bg-white rounded-lg shadow p-6 border border-green-200">
             <h4 class="font-semibold text-xl text-green-600 mb-2">Yağ Yakım Planı</h4>
-            <p class="text-sm text-gray-600">Kalori kontrolü ve yağ yakımını destekleyen dengeli bir plan.</p>
+            <p class="text-sm text-gray-600">Dengeli beslenme ile yağ yakımını destekler.</p>
           </div>
-          <div class="bg-white rounded-lg shadow p-6">
+          <div class="bg-white rounded-lg shadow p-6 border border-green-200">
             <h4 class="font-semibold text-xl text-green-600 mb-2">Kas Gelişim Planı</h4>
-            <p class="text-sm text-gray-600">Protein odaklı beslenme ile kas yapımını destekler.</p>
+            <p class="text-sm text-gray-600">Yüksek proteinli diyet ile kas gelişimini destekler.</p>
           </div>
-          <div class="bg-white rounded-lg shadow p-6">
+          <div class="bg-white rounded-lg shadow p-6 border border-green-200">
             <h4 class="font-semibold text-xl text-green-600 mb-2">Detoks Planı</h4>
-            <p class="text-sm text-gray-600">Vücudu toksinlerden arındırmaya yönelik kısa süreli plan.</p>
+            <p class="text-sm text-gray-600">Kısa süreli vücut arındırma programı.</p>
           </div>
         </div>
       </section>
 
       <section id="iletisim" class="mb-20">
-        <h3 class="text-2xl font-bold mb-4 text-green-700">Bizimle İletişime Geç</h3>
-        <p class="text-gray-700 mb-4">Herhangi bir sorunuz varsa veya plan önerisi almak istiyorsanız bize ulaşın.</p>
+        <h3 class="text-2xl font-bold mb-4 text-green-700">İletişim</h3>
         <form class="grid gap-4 max-w-lg">
           <input type="text" placeholder="Adınız" class="border border-gray-300 rounded px-4 py-2">
-          <input type="email" placeholder="E-posta adresiniz" class="border border-gray-300 rounded px-4 py-2">
+          <input type="email" placeholder="E-posta" class="border border-gray-300 rounded px-4 py-2">
           <textarea placeholder="Mesajınız" class="border border-gray-300 rounded px-4 py-2"></textarea>
           <button class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition">Gönder</button>
         </form>
